Pre publish